Review Request 17313: port over changes to trunk